added proper CI/CD

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>⛪ Join the Church of Chiko ⛪</title>
+  <title>⛪ Church of Chiko ⛪</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel=icon type=image/png href=favicon.png>
   <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css">
@@ -18,8 +18,8 @@
         <a class="navbar-item" href="join">
           Join the Church of Chiko
         </a>
-        <a class="navbar-item" href="doctrine">
-          Rules of the Church of Chiko
+        <a class="navbar-item" href="Doctrine">
+          Doctrine of the Church of Chiko
         </a>
       </div>
     </div>
@@ -27,20 +27,19 @@
   <section class="hero is-link is-fullheight-with-navbar">
     <div class="hero-body">
       <div class="container">
-        <h1 class="title" id="join-message">
-          Join the Church of Chiko
+        <h1 class="title">
+          Welcome to the Church of Chiko
         </h1>
-        <h2 class="subtitle" id="member-count">
-          Current Members:
+        <h2 class="subtitle">
+          Nothing matters and existence is futile. Only Chiko is forever.
         </h2>
-        <h2>
-          <button class="button is-info" onclick="join()">Join</button>
-        </h2>
+        <iframe style="height: 315px" width="560px" height="315px"
+          src="https://www.youtube-nocookie.com/embed/A-yfi5NiIrg" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
     </div>
   </section>
-  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
-  <script src="/js/join.js"></script>
 </body>
+
+</html>
