fixed favicon & non-blocking youtube embed

--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,11 @@
         <h2 class="subtitle">
           Nothing matters and existence is futile. Only Chiko is forever.
         </h2>
-        <iframe style="height: 315px" width="560px" height="315px"
-          src="https://www.youtube-nocookie.com/embed/A-yfi5NiIrg" frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div id="ytplayer"></div>
       </div>
-
     </div>
   </section>
+  <script src=js/ytplayer.js></script>
 </body>
 
 </html>
