use minified JS

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       </div>
     </div>
   </section>
-  <script src=js/ytplayer.js></script>
+  <script src=js/ytplayer.min.js></script>
 </body>
 
 </html>
