--- a/src/join.html
+++ b/src/join.html
@@ -43,5 +43,5 @@
   <script src="/__/firebase/7.15.5/firebase-app.js"></script>
   <script src="/__/firebase/7.15.5/firebase-firestore.js"></script>
   <script src="/__/firebase/init.js"></script>
-  <script src="/js/join.js"></script>
+  <script src="/js/join.min.js"></script>
 </body>
