youtube bad, html5 video good

--- a/src/index.html
+++ b/src/index.html
@@ -33,11 +33,13 @@
         <h2 class="subtitle">
           Nothing matters and existence is futile. Only Chiko is forever.
         </h2>
-        <div id="ytplayer"></div>
+        <video width="560" height="315" poster="static/religion.png" controls autoplay>
+          <source src="static/religion.webm" type="video/webm"></source>
+          <source src="static/religion.mp4" type="video/mp4"></source>
+        </video>
       </div>
     </div>
   </section>
-  <script src=js/ytplayer.min.js></script>
 </body>
 
 </html>
