--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>⛪ Church of Chiko ⛪</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel=icon type=image/png href=favicon.png>
-  <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="css/bulma.min.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <a class="navbar-item" href="join">
           Join the Church of Chiko
         </a>
-        <a class="navbar-item" href="Doctrine">
+        <a class="navbar-item" href="doctrine">
           Doctrine of the Church of Chiko
         </a>
       </div>
@@ -33,7 +33,7 @@
         <h2 class="subtitle">
           Nothing matters and existence is futile. Only Chiko is forever.
         </h2>
-        <video width="560" height="315" poster="static/religion.png" controls autoplay>
+        <video width="560" height="315" poster="static/religion.webp" controls autoplay>
           <source src="static/religion.webm" type="video/webm"></source>
           <source src="static/religion.mp4" type="video/mp4"></source>
         </video>
