--- a/src/404.html
+++ b/src/404.html
@@ -5,7 +5,7 @@
   <title>404 Page Not Found</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <meta charset=utf-8>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: Roboto, sans-serif;
