--- a/src/doctrine.html
+++ b/src/doctrine.html
@@ -5,7 +5,7 @@
   <title>⛪ Doctrine of Church of Chiko ⛪</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css">
+  <link rel="stylesheet" href="css/bulma.min.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <a class="navbar-item" href="join">
           Join the Church of Chiko
         </a>
-        <a class="navbar-item" href="Doctrine">
+        <a class="navbar-item" href="doctrine">
           Doctrine of the Church of Chiko
         </a>
       </div>
