--- a/src/join.html
+++ b/src/join.html
@@ -5,7 +5,7 @@
   <title>⛪ Join the Church of Chiko ⛪</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css">
+  <link rel="stylesheet" href="css/bulma.min.css">
 </head>
 
 <body>
