--- a/src/join.html
+++ b/src/join.html
@@ -24,7 +24,7 @@
       </div>
     </div>
   </nav>
-  <section class="hero is-link is-fullheight-with-navbar">
+  <section class="hero">
     <div class="hero-body">
       <div class="container">
         <h1 class="title" id="join-message">
@@ -34,7 +34,7 @@
           Current Members:
         </h2>
         <h2>
-          <button class="button is-info" onclick="join()">Join</button>
+          <button class="" onclick="join()">Join</button>
         </h2>
       </div>
 
