--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
   </nav>
-  <section class="hero is-link is-fullheight-with-navbar">
+  <section class="hero">
     <div class="hero-body">
       <div class="container">
         <h1 class="title">
